@@ -12,12 +12,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.*;
 
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class StudentServiceTest {
@@ -30,6 +29,9 @@ public class StudentServiceTest {
     @InjectMocks
     StudentService studentService;
 
+    private StudentDTO studentDTOTest1 = new StudentDTO(0L, "Martin", "", 6.8, List.of(new SubjectDTO("Matemática", 8.0), new SubjectDTO("Física", 9.0)));
+    private StudentDTO studentDTOTest3DeUserJuan = new StudentDTO(1L, "Juan", null, null, List.of(new SubjectDTO("Matemática", 9.0), new SubjectDTO("Física", 7.0), new SubjectDTO("Química", 6.0)));
+    private StudentDTO studentDTOTest3DeUserPedro = new StudentDTO(2L, "Pedro", null, null, List.of(new SubjectDTO("Matemática", 10.0), new SubjectDTO("Física", 8.0), new SubjectDTO("Química", 4.0)));
 
     @BeforeEach
     public void loadData() {
@@ -42,12 +44,17 @@ public class StudentServiceTest {
         studentDTO2.setId(1L);
         studentDTO2.setStudentName("Juan");
         studentDTO2.setSubjects(new ArrayList<>(Arrays.asList(new SubjectDTO("Matemática", 9.0), new SubjectDTO("Física", 7.0), new SubjectDTO("Química", 6.0))));
+    }
 
-        StudentDTO studentDTO_expected = new StudentDTO();
-        studentDTO_expected.setId(1L);
-        studentDTO_expected.setStudentName("Juan");
-        studentDTO_expected.setSubjects(new ArrayList<>(Arrays.asList(new SubjectDTO("Matemática", 9.0), new SubjectDTO("Física", 7.0), new SubjectDTO("Química", 6.0))));
+    @Test
+    void create() {
+        //Arrange
+        StudentDTO studentMartin = studentDTOTest1;
+        // act
+        studentService.create(studentMartin);
 
+        // assert
+        verify(studentDAO, atLeastOnce()).save(studentMartin);
     }
 
     @Test
@@ -65,41 +72,48 @@ public class StudentServiceTest {
 
         //Act
         when(studentDAO.findById(1L)).thenReturn(expectedstudentDTO);
-
         actualStudentDto = studentService.read(1L);
 
         //Assert
-
         Assertions.assertEquals(expectedstudentDTO, actualStudentDto);
 
     }
 
     @Test
+    void update() {
+        //Arrange
+        StudentDTO studentMartin = studentDTOTest1;
+        // act
+        studentService.update(studentMartin);
+
+        // assert
+        verify(studentDAO, atLeastOnce()).save(studentMartin);
+    }
+
+    @Test
+    void delete(){
+        //Arrange
+        StudentDTO studentMartin = studentDTOTest1;
+        // act
+        studentService.delete(studentMartin.getId());
+
+        // assert
+        verify(studentDAO, atLeastOnce()).delete(studentMartin.getId());
+    }
+
+    @Test
     public void getAll() {
 
-        //Arrange
-        StudentDTO studentDTO1 = new StudentDTO();
-        studentDTO1.setId(1L);
-        studentDTO1.setStudentName("Pedro");
-        studentDTO1.setSubjects(new ArrayList<>(Arrays.asList(new SubjectDTO("Matemática", 10.0), new SubjectDTO("Física", 8.0), new SubjectDTO("Química", 4.0))));
-
-        StudentDTO studentDTO2 = new StudentDTO();
-        studentDTO2.setId(2L);
-        studentDTO2.setStudentName("Juan");
-        studentDTO2.setSubjects(new ArrayList<>(Arrays.asList(new SubjectDTO("Matemática", 9.0), new SubjectDTO("Física", 7.0), new SubjectDTO("Química", 6.0))));
-
-        StudentDTO studentDTO = new StudentDTO();
-        studentDTO.setId(3L);
-        studentDTO.setStudentName("Juan");
-        studentDTO.setSubjects(new ArrayList<>(Arrays.asList(new SubjectDTO("Matemática", 9.0), new SubjectDTO("Física", 7.0), new SubjectDTO("Química", 6.0))));
-
-        Set<StudentDTO> studentDTOSet = new HashSet<>();
-        studentDTOSet.add(studentDTO1);
-        studentDTOSet.add(studentDTO2);
-        studentDTOSet.add(studentDTO);
-
-
-        //when(studentRepository.findAll()).thenReturn(studentDTOSet);
+        // Arrange
+        Set<StudentDTO> loadedDataExpected = new HashSet<>();
+        loadedDataExpected.addAll(Set.of(new StudentDTO(2L, "Pedro", null, null, List.of(new SubjectDTO("Matemática", 10.0), new SubjectDTO("Física", 8.0), new SubjectDTO("Química", 4.0))),
+                new StudentDTO(1L, "Juan", null, null, List.of(new SubjectDTO("Matemática", 9.0), new SubjectDTO("Física", 7.0), new SubjectDTO("Química", 6.0)))));
+        when(studentRepository.findAll()).thenReturn(loadedDataExpected);
+        // Act
+        Set<StudentDTO> loadedDataResult = studentService.getAll();
+        // Assert);
+        assertTrue(loadedDataExpected.size() == loadedDataResult.size());
+        assertEquals(loadedDataExpected, loadedDataResult);
     }
 }
 
